--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,126 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+button{ /* 홈 때문에 추가 */
+
+  background-color:transparent;
+  border: 0;
+}
+img{ /* 홈 때문에 추가 */
+
+  border: 0;
+}
+
+.navbar-nav {
+  display: flex; /* 메뉴 목록을 가로로 표시 */
+  justify-content: center; /* 가운데 정렬 */
+  align-items: center; /* 메뉴 목록 세로 중앙에 정렬 */
+}
+
+.detailButton {
+    border: none;
+    background-color: rgba(0,0,0,0);
+    color: rgb(51, 63, 234);
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+
+
+.navbar-nav .nav-link {
+  color: white; /* 글자 색상 지정 */
+  font-size: 2rem; /* 글자 크기 지정 */
+  padding-right: 1rem; /* 메뉴 아이템들 사이의 간격을 조정 */
+  padding-left: 1rem;
+  justify-content: center;
+  margin-right: 1rem;
+}
+
+.navbar-nav .nav-link.active {
+  font-weight: bold; /* 활성화된 메뉴 아이템의 글자 두께를 두껍게 지정 */
+}
+
+.navbar a {
+  color: white; /* 글자 색상 지정 */
+  text-decoration: none; /* 밑줄 제거 */
+  font-size: 2rem; /* 글자 크기 지정 */
+}
+
+
+
+.banner {
+  position: fixed;
+  /* margin-top: 100; */
+  /* width: 100% */
+  left: 0;
+  right: 0;
+  background-color: #282c34;
+  color: white;
+  /* z-index: 2; */
+}
+
+.news {
+  background-image: url('./news_background.jpg');
+  background-size: cover;
+  background-position: top center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  justify-content: center;
+  padding-top: 100px;
+  align-items: center;
+  display: flex;
+}
+
+.top-button {
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  left: 50px;
+  z-index: 9999;
+  font-size: 16px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  transition: opacity 0.4s;
+}
+
+.top-button.show {
+  display: block;
+}
+
+.top-button:hover {
+  opacity: 0.8;
+}
+
+.home-search-area{ /* 홈 때문에 추가*/
+  width: 30%;
+  float: left;
+  height: 550px;
+  box-sizing: border-box;
+  background: #8977ad;
+
+}
+
+.home-contents-area{ /* 홈 때문에 추가*/
+  width: 70%;
+  float: right;
+  height: 550px;
+  box-sizing: border-box;
+  background: #ece6cc;
+
+}
+
+button{ /* 홈 때문에 추가 */
+
+  background-color:transparent;
+  border: 0;
+}
+img{ /* 홈 때문에 추가 */
+
+  border: 0;
 }
