--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -1,7 +1,47 @@
 .sojustyle {
-    /*width: 20%;*/
-    width: 250px;
-  height: 250px;
-    margin: auto;
-    display: block;
+  /*width: 20%;*/
+  width: 250px;
+height: 250px;
+  margin: auto;
+  display: block;
+}
+
+.comment-box-container {
+  margin-top: -250px;
+  margin-left:-100px
+}
+
+.comment-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.comment-submit-btn {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.comment-list {
+  margin-top: 350px;
+  
+}
+
+.comment-item {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.no-comments {
+  text-align: center;
+  color: #999;
 }
