--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -12,7 +12,14 @@ height: 250px;
   
   
 }
+.comment-username{
+  font-weight: bold;
 
+
+}
+.comment-ul {
+  list-style-type: none;
+}
 .comment-input {
   width: 300px;
   padding: 10px;
@@ -24,6 +31,17 @@ height: 250px;
   margin-top: -80px;
   margin-right: -185px;
   margin-left:120px;
+}
+
+.profile-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.comment-text {
+  display: inline;
+  margin-left: 50px
 }
 
 .comment-submit-btn {
