전반적인 색상 수정

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ code {
   float: left;
   height: 950px;
   box-sizing: border-box;
-  background: #8977ad;
+  background: #003458;
 
 }
 
@@ -111,7 +111,7 @@ code {
   float: right;
   height: 950px;
   box-sizing: border-box;
-  background: #ece6cc;
+  background: #f5f5dc;
 
 }
 .content-container {
