--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -45,7 +45,7 @@ height: 250px;
 }
 
 .comment-submit-btn {
-  background-color: #4caf50;
+  background-color: #0E0F37;
   color: #fff;
   height:50px;
   padding: 10px 20px;
