--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -69,12 +69,13 @@ height: 250px;
   float: left;
   margin-left:150px;
   width : 700px;
-  height : 250px
+  height : 250px;
+  background-color: rgba(255, 255, 255, 0.0); /* 투명도를 조절할 수 있는 rgba() 함수 사용 */
   
 }
 
 .comment-item {
-  background-color: #f5f5f5;
+  background-color: rgba(0, 73, 140, 0.3);
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
