--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ code {
   float: left;
   height: 950px;
   box-sizing: border-box;
-  background: #003458;
+  background: rgba(0, 52, 88, 0.9); /* 투명도를 조절할 수 있는 rgba() 함수 사용 */
 
 }
 
@@ -111,7 +111,7 @@ code {
   float: right;
   height: 950px;
   box-sizing: border-box;
-  background: #f5f5dc;
+  background-color: rgba(245, 245, 220, 0.2);
 
 }
 .content-container {
