--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -74,6 +74,11 @@ height: 250px;
   
 }
 
+.comment-list::-webkit-scrollbar {
+  width: 10px; /* 스크롤 바의 너비 */
+  background-color: rgba(0, 0, 0, 0); /* 스크롤 바 배경색 (투명하게) */
+}
+
 .comment-item {
   background-color: rgba(0, 73, 140, 0.3);
   padding: 10px;
