술 사진 이미지 테두리 추가

--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -4,6 +4,7 @@
 height: 250px;
   margin: auto;
   display: block;
+  border: 5px solid rgba(0, 52, 88, 0.8); /* 남색 테두리 */
 }
 
 .comment-box-container {
