--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -1,7 +1,7 @@
 .sojustyle {
   /*width: 20%;*/
   width: 250px;
-height: 250px;
+  height: 250px;
   margin: auto;
   display: block;
   border: 5px solid rgba(0, 52, 88, 0.8); /* 남색 테두리 */
@@ -22,7 +22,7 @@ height: 250px;
   list-style-type: none;
 }
 .comment-input {
-  width: 300px;
+  width: 400px;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -32,6 +32,7 @@ height: 250px;
   margin-top: -80px;
   margin-right: -185px;
   margin-left:120px;
+  height: 80px
 }
 
 .profile-image {
@@ -39,6 +40,13 @@ height: 250px;
   height: 40px;
   border-radius: 50%;
   margin-right: 10px;
+}
+
+.memo-pin-image {
+  width: 80px; /* 이미지의 가로 크기 */
+  height: 80px; /* 이미지의 세로 크기 */
+  margin-left: 550px; /* 이미지의 왼쪽 여백 */
+  margin-top: -70px;
 }
 .comment-text {
   display: inline;
@@ -56,6 +64,7 @@ height: 250px;
   margin-left:190px;
   margin-top: -45px;
   margin-bottom: 10px;
+  line-height: 35px; /* 글자의 세로 정렬 조정 */
   
 }
 .comment-button-submit-location{
@@ -71,7 +80,7 @@ height: 250px;
   margin-left:150px;
   width : 700px;
   height : 250px;
-  background-color: rgba(255, 255, 255, 0.0); /* 투명도를 조절할 수 있는 rgba() 함수 사용 */
+  background-color: rgba(226, 220, 220, 0); /* 투명도를 조절할 수 있는 rgba() 함수 사용 */
   
 }
 
@@ -81,13 +90,45 @@ height: 250px;
 }
 
 .comment-item {
-  background-color: rgba(0, 73, 140, 0.3);
+  background-color: rgb(255, 255, 255);
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
 }
+.image-info-container {
+  display: flex;
+  align-items: flex-start;
+}
 
+.image-container {
+  flex: 1;
+  margin-top: 20px;
+  margin-left:-85px;
+}
+.info-container {
+  flex: 1;
+  padding-left: 10px; /* 왼쪽 패딩을 10px로 설정 */
+  margin-left:-55px;
+}
+
+.info-container h1 {
+  text-align: center;
+  margin-left:-75px;
+  margin-top: 20px;
+  font-size:65px;
+  font-weight: 595;
+  
+}
+.info-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.info-container p {
+  margin-bottom: 10px;
+  margin-left:-75px;
+}
 .no-comments {
   text-align: center;
   color: #999;
