--- a/src/pages/Soju.css
+++ b/src/pages/Soju.css
@@ -1,10 +1,10 @@
 .sojustyle {
-  /*width: 20%;*/
+  
   width: 250px;
   height: 250px;
   margin: auto;
   display: block;
-  border: 5px solid rgba(0, 52, 88, 0.8); /* 남색 테두리 */
+  border: 5px solid rgba(0, 52, 88, 0.8); 
 }
 
 .comment-box-container {
@@ -27,8 +27,7 @@
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  /*margin-left:50px;
-  margin-right:20px;*/
+  
   margin-top: -80px;
   margin-right: -185px;
   margin-left:120px;
@@ -43,9 +42,9 @@
 }
 
 .memo-pin-image {
-  width: 80px; /* 이미지의 가로 크기 */
-  height: 80px; /* 이미지의 세로 크기 */
-  margin-left: 550px; /* 이미지의 왼쪽 여백 */
+  width: 80px; 
+  height: 80px; 
+  margin-left: 550px; 
   margin-top: -70px;
 }
 .comment-text {
@@ -64,11 +63,11 @@
   margin-left:190px;
   margin-top: -45px;
   margin-bottom: 10px;
-  line-height: 35px; /* 글자의 세로 정렬 조정 */
+  line-height: 35px; 
   
 }
 .comment-button-submit-location{
-  display: flex; /* 내부 요소들을 가로로 배치 */
+  display: flex; 
   
 
 }
@@ -80,13 +79,13 @@
   margin-left:380px;
   width : 700px;
   height : 350px;
-  background-color: rgba(226, 220, 220, 0); /* 투명도를 조절할 수 있는 rgba() 함수 사용 */
+  background-color: rgba(226, 220, 220, 0); 
   
 }
 
 .comment-list::-webkit-scrollbar {
-  width: 10px; /* 스크롤 바의 너비 */
-  background-color: rgba(0, 0, 0, 0); /* 스크롤 바 배경색 (투명하게) */
+  width: 10px; 
+  background-color: rgba(0, 0, 0, 0); 
 }
 
 .comment-item {
@@ -108,7 +107,7 @@
 }
 .info-container {
   flex: 1;
-  padding-left: 10px; /* 왼쪽 패딩을 10px로 설정 */
+  padding-left: 10px; 
   margin-left:-55px;
 }
 
